--- a/settings.ini
+++ b/settings.ini
@@ -38,6 +38,6 @@ status = 3
 user = kevinkorfmann
 
 ### Optional ###
-requirements = torch torch_geometric jupyterlab
+requirements = torch torch_geometric jupyterlab seaborn pandas numpy networkx logging msprime tskit x_transformers
 # dev_requirements = 
 # console_scripts =
